Import of RSAVAGE/Graph-Easy-Marpa-1.07 from CPAN.
gitpan-cpan-distribution: Graph-Easy-Marpa
gitpan-cpan-version:      1.07
gitpan-cpan-path:         RSAVAGE/Graph-Easy-Marpa-1.07.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/html/index.html
+++ b/html/index.html
@@ -6,15 +6,14 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 </head>
 <body>
-	<h1>Index of sample files created by <a href="http://metacpan.org/release/Graph-Easy-Marpa">Graph::Easy::Marpa</a> V 1.05.</h1>
+	<h1>Index of sample files created by <a href="http://metacpan.org/release/Graph-Easy-Marpa">Graph::Easy::Marpa</a> V 1.07.</h1>
 
 <p>All scripts, input files and output files required to generate these examples are shipped in the Graph::Easy::Marpa distro.</p>
 
 <p>Some sample data is deliberately faulty, and so does not show up here. Some sample data contains fake attributes, just
 to test the code. These will make 'dot' die, but are included here.</p>
 
-<p>The output for input file data/graph.15.raw corresponds to the output for input file # 6 (scripts/jointed.edges.pl) in
-
+<p>The output for input file data/graph.15.raw corresponds to the output for scripts/jointed.edges.pl in
 <a href="http://savage.net.au/Perl-modules/html/graphviz2/index.html">the GraphViz2 demo.</a></p>
 
 <table align = "center" border = "1">
@@ -220,7 +219,7 @@ to test the code. These will make 'dot' die, but are included here.</p>
 </tr>
 </table>
 
-<p>Last updated: 2011-08-02 16:20:29.</p>
+<p>Last updated: 2011-12-15 16:11:23.</p>
 
 <p>
 <a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Transitional" height="31" width="88" /></a>
