Import of RSAVAGE/Graph-Easy-Marpa-1.11 from CPAN.
gitpan-cpan-distribution: Graph-Easy-Marpa
gitpan-cpan-version:      1.11
gitpan-cpan-path:         RSAVAGE/Graph-Easy-Marpa-1.11.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/html/index.html
+++ b/html/index.html
@@ -2,11 +2,15 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
-  <title>Index of sample files created by Graph::Easy::Marpa</title>
-  <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+	<title>Index of sample files created by Graph::Easy::Marpa</title>
+	<meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
+	<meta http-equiv="cache-control" content="no-cache">
+	<meta http-equiv="pragma" content="no-cache">
+	<link rel="stylesheet" type="text/css" href="/assets/css/graphviz2/marpa/default.css">
+	<link rel="stylesheet" type="text/css" href="/assets/css/graphviz2/marpa/fancy.table.css">
 </head>
 <body>
-  <h1>Index of sample files created by <a href="http://metacpan.org/release/Graph-Easy-Marpa">Graph::Easy::Marpa</a> V 1.09.</h1>
+  <h1>Index of sample files created by <a href="http://metacpan.org/release/Graph-Easy-Marpa">Graph::Easy::Marpa</a> V 1.11.</h1>
 
 	<p>All scripts, input files and output files required to generate these examples are shipped in the Graph::Easy::Marpa distro.</p>
 
@@ -90,11 +94,11 @@
   <td><object data = "./edge.08.svg"># Edges with fancy arrows. OK.</object><br /><br />Output file # 18 - html/edge.08.svg<br /># Edges with fancy arrows. OK.</td>
 </tr>
 <tr>
-  <td>Input file # 19 - data/graph.11.raw:<br /># Ends with edge without attributes. OK.<br />[node.1]{color: red}-&gt;{color: green;}-&gt;{color: red}[node.2]--</td>
+  <td>Input file # 19 - data/graph.11.raw:<br /># Ends with edge without attributes. OK.<br />[node.1]{color: red}-&gt;{color: green;}-&gt;{color: red}[node.2]</td>
   <td><object data = "./graph.11.svg"># Ends with edge without attributes. OK.</object><br /><br />Output file # 19 - html/graph.11.svg<br /># Ends with edge without attributes. OK.</td>
 </tr>
 <tr>
-  <td>Input file # 20 - data/graph.13.raw:<br /># Juxtapositioned edges (without comma). OK.<br />[Murrumbeena] {color: blue} -&gt; {color: green} -&gt; {color: red} [Carnegie] {color: crimson} -- {color: brown} [Chadstone] {color: blueviolet}</td>
+  <td>Input file # 20 - data/graph.13.raw:<br /># Juxtapositioned edges (without comma). OK.<br />[Murrumbeena] {color: blue} -&gt; {color: green} -&gt; {color: red} [Carnegie] {color: crimson} -&gt; {color: brown} [Chadstone] {color: blueviolet}</td>
   <td><object data = "./graph.13.svg"># Juxtapositioned edges (without comma). OK.</object><br /><br />Output file # 20 - html/graph.13.svg<br /># Juxtapositioned edges (without comma). OK.</td>
 </tr>
 <tr>
@@ -231,11 +235,78 @@
 </tr>
 </table>
 
-	  <p>Last updated: 2012-06-26 16:03:48.</p>
+<hr />
 
-	  <p>
-		<a href="http://validator.w3.org/check?uri=referer"><img src="http://www.w3.org/Icons/valid-xhtml10" alt="Valid XHTML 1.0 Strict" height="31" width="88" /></a>
-	  </p>
+<h3 class="global_toc_text">Links</h3>
+
+<h2 align="center">Index page for <a href="http://savage.net.au/Graph-module-demos.html">all graph module demos</a></h2>
+
+<h2 align="center">Demo page for <a href="http://savage.net.au/Perl-modules/html/graph.easy.marpa/stt.html">State Transition Table</a></h2>
+
+<hr />
+
+<h3 class="global_toc_text">Environment</h3>
+
+<table align="center" cellspacing="0">
+<tr>
+<!-- Left -->
+<td>
+<div class="even_left">
+Author
+</div>
+</td>
+<!-- Right -->
+<td>
+<div class="even_right">
+<a href="http://savage.net.au/">Ron Savage</a>
+</div>
+</td>
+</tr>
+<tr>
+<!-- Left -->
+<td>
+<div class="odd_left">
+Date
+</div>
+</td>
+<!-- Right -->
+<td>
+<div class="odd_right">
+2012-11-08
+</div>
+</td>
+</tr>
+<tr>
+<!-- Left -->
+<td>
+<div class="even_left">
+OS
+</div>
+</td>
+<!-- Right -->
+<td>
+<div class="even_right">
+Debian V 6
+</div>
+</td>
+</tr>
+<tr>
+<!-- Left -->
+<td>
+<div class="last_odd_left">
+Perl
+</div>
+</td>
+<!-- Right -->
+<td>
+<div class="last_odd_right">
+5.14.2
+</div>
+</td>
+</tr>
+</table>
+
+<hr />
 
 </body>
 </html>
