Import of RSAVAGE/Graph-Easy-Marpa-1.12 from CPAN.
gitpan-cpan-distribution: Graph-Easy-Marpa
gitpan-cpan-version:      1.12
gitpan-cpan-path:         RSAVAGE/Graph-Easy-Marpa-1.12.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/html/index.html
+++ b/html/index.html
@@ -10,7 +10,7 @@
 	<link rel="stylesheet" type="text/css" href="/assets/css/graphviz2/marpa/fancy.table.css">
 </head>
 <body>
-  <h1>Index of sample files created by <a href="http://metacpan.org/release/Graph-Easy-Marpa">Graph::Easy::Marpa</a> V 1.11.</h1>
+  <h1>Index of sample files created by <a href="http://metacpan.org/release/Graph-Easy-Marpa">Graph::Easy::Marpa</a> V 1.12.</h1>
 
 	<p>All scripts, input files and output files required to generate these examples are shipped in the Graph::Easy::Marpa distro.</p>
 
@@ -46,7 +46,7 @@
   <td><object data = "./class.group.03.svg"># Group with attributes. OK.</object><br /><br />Output file # 6 - html/class.group.03.svg<br /># Group with attributes. OK.</td>
 </tr>
 <tr>
-  <td>Input file # 7 - data/class.group.04.raw:<br /># Edge, group and node classes. OK.<br />edge {color: white} group {bgcolor: red} node.green {color: green; shape: square} (cluster.1: [node.1] {class: green} -&gt; [node.2]) {class: group}</td>
+  <td>Input file # 7 - data/class.group.04.raw:<br /># Edge, group and node classes. OK.<br />edge {color: white} group {bgcolor: red} node.green {color: green; shape: rect} (cluster.1: [node.1] {class: green} -&gt; [node.2]) {class: group}</td>
   <td><object data = "./class.group.04.svg"># Edge, group and node classes. OK.</object><br /><br />Output file # 7 - html/class.group.04.svg<br /># Edge, group and node classes. OK.</td>
 </tr>
 <tr>
@@ -62,7 +62,7 @@
   <td><object data = "./class.node.08.svg"># Class with attributes. OK.</object><br /><br />Output file # 10 - html/class.node.08.svg<br /># Class with attributes. OK.</td>
 </tr>
 <tr>
-  <td>Input file # 11 - data/class.node.09.raw:<br /># Classes with attributes. OK.<br />edge {color: blue; arrowhead: odot} node.green {color: green; shape: square} [node.1] {color: pink} -&gt; [node.2] {class: green}</td>
+  <td>Input file # 11 - data/class.node.09.raw:<br /># Classes with attributes. OK.<br />edge {color: blue; arrowhead: odot} node.green {color: green; shape: rect} [node.1] {color: pink} -&gt; [node.2] {class: green}</td>
   <td><object data = "./class.node.09.svg"># Classes with attributes. OK.</object><br /><br />Output file # 11 - html/class.node.09.svg<br /># Classes with attributes. OK.</td>
 </tr>
 <tr>
@@ -272,7 +272,7 @@ Date
 <!-- Right -->
 <td>
 <div class="odd_right">
-2012-11-08
+2012-12-21
 </div>
 </td>
 </tr>
